<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.5.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.bonc</groupId>
	<artifactId>springbootTest</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>eureka-server-1</name>
	<description>Practise project for Spring Cloud</description>

	<properties>
		<java.version>1.8</java.version>
		<commons-logging.version>1.2</commons-logging.version>
    	<log4j.version>1.2.17</log4j.version>
    	<poi.version>3.15</poi.version>
    	<slf4j2-log.scope>provided</slf4j2-log.scope>
    	<springboot.version>2.1.5</springboot.version>
	</properties>

	<dependencies>
<!-- 日志采用slf4j+logback，排除其他日志，导入桥接器 ，begin-->
		<!-- 排除jcl、log4j、log4j2；jul由springboot排除 -->
		<dependency>
	      <groupId>commons-logging</groupId>
	      <artifactId>commons-logging</artifactId>
	      <version>${commons-logging.version}</version>
	      <scope>test</scope>
	    </dependency>
	    <dependency>
	      <groupId>log4j</groupId>
	      <artifactId>log4j</artifactId>
	      <version>${log4j.version}</version>
	      <scope>test</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.apache.logging.log4j</groupId>
	      <artifactId>log4j-core</artifactId>
	      <scope>test</scope>
	    </dependency>
	    <!-- 排除slf4j到jcl、jul、log4j、log4j2桥接器；打包时排除，否则 测试时报错 -->
	    <!-- <dependency>
	      <groupId>org.slf4j</groupId>
	      <artifactId>slf4j-jcl</artifactId>
	      <scope>${slf4j2-log.scope}</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.slf4j</groupId>
	      <artifactId>slf4j-jdk14</artifactId>
	      <scope>${slf4j2-log.scope}</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.slf4j</groupId>
	      <artifactId>slf4j-log4j12</artifactId>
	      <scope>${slf4j2-log.scope}</scope>
	    </dependency>
	    <dependency>
	      <groupId>org.apache.logging.log4j</groupId>
	      <artifactId>log4j-slf4j-impl</artifactId>
	      <scope>${slf4j2-log.scope}</scope>
	    </dependency> -->
		<!-- 导入桥接器，jcl、jul、log4j、log4j2到slf4j -->
	    <dependency>
	      <groupId>org.slf4j</groupId>
	      <artifactId>jcl-over-slf4j</artifactId>
	      </dependency>
	    <dependency>
	      <groupId>org.slf4j</groupId>
	      <artifactId>jul-to-slf4j</artifactId>
	     </dependency>
	    <dependency>
	      <groupId>org.slf4j</groupId>
	      <artifactId>log4j-over-slf4j</artifactId>
	      </dependency>	
	    <dependency>
	      <groupId>org.apache.logging.log4j</groupId>
	      <artifactId>log4j-api</artifactId>
	      </dependency>	
	    <dependency>
	      <groupId>org.apache.logging.log4j</groupId>
	      <artifactId>log4j-to-slf4j</artifactId>
	      </dependency>	      
	    <!-- 导入slf4j、logback，slf4j-logback桥接器无需导入，默认 -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
	    <dependency>
	      <groupId>ch.qos.logback</groupId>
	      <artifactId>logback-core</artifactId>
        </dependency>
	    <dependency>
	      <groupId>ch.qos.logback</groupId>
	      <artifactId>logback-classic</artifactId>
        </dependency>
<!-- 日志配置end -->
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <!-- <scope>test</scope> -->
		</dependency>
		<!-- 工具包 -->
		<dependency>
		    <groupId>cn.hutool</groupId>
		    <artifactId>hutool-all</artifactId>
		    <version>4.6.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
		<dependency>
		    <groupId>net.sf.ehcache</groupId>
		    <artifactId>ehcache</artifactId>
	    </dependency>
		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
		<!-- <dependency>
		    <groupId>redis.clients</groupId>
		    <artifactId>jedis</artifactId>
		</dependency> -->
					
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>			
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-amqp</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.querydsl/querydsl-jpa -->
		<dependency>
		    <groupId>com.querydsl</groupId>
		    <artifactId>querydsl-jpa</artifactId>
		    </dependency>
		<dependency>
		    <groupId>com.querydsl</groupId>
		    <artifactId>querydsl-apt</artifactId>
	    </dependency>
				
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid-spring-boot-starter</artifactId>
			<version>1.1.9</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-security</artifactId>
	    </dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
			</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
			</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-pool2</artifactId>
		    </dependency>
				
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.47</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-jwt</artifactId>
			<version>1.0.9.RELEASE</version>
		</dependency>
		<dependency>
		    <groupId>com.auth0</groupId>
		    <artifactId>java-jwt</artifactId>
		    <version>3.8.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
		<dependency>
		    <groupId>org.springframework.security.oauth</groupId>
		    <artifactId>spring-security-oauth2</artifactId>
		    <version>2.3.6.RELEASE</version>
		</dependency>
		<dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-starter-client</artifactId>
            <version>${springboot.version}</version>
        </dependency>
		<!-- 版本必须一致 -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
	        <groupId>org.apache.poi</groupId>
	        <artifactId>poi-ooxml</artifactId>
	        <version>${poi.version}</version>
	    </dependency>
	    <dependency>
	        <groupId>org.apache.poi</groupId>
	        <artifactId>poi-scratchpad</artifactId>
	        <version>${poi.version}</version>
	    </dependency>
	  	<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
		<dependency>
		    <groupId>io.netty</groupId>
		    <artifactId>netty-all</artifactId>
	    </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
			</plugin>
		    <plugin>
		      <groupId>com.mysema.maven</groupId>
		      <artifactId>apt-maven-plugin</artifactId>
		      <version>1.1.3</version>
		      <executions>
		        <execution>
		          <goals>
		            <goal>process</goal>
		          </goals>
		          <configuration>
		            <outputDirectory>target/generated-sources/java</outputDirectory>
		            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
		          </configuration>
		        </execution>
		      </executions>
		    </plugin>
		</plugins>
	</build>

</project>
